// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSBuilderHeader After Successful Save 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <div
        className="slds-builder-toolbar"
        role="toolbar"
      >
        <div
          aria-label="Canvas Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-canvas-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#undo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Undo
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#redo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Redo
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Edit Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-edit-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#cut"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Cut
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#copy"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Copy
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#paste"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Paste
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Document Actions"
          className="slds-builder-toolbar__actions"
        >
          <div>
            <div
              className="slds-tooltip-trigger"
              style={
                Object {
                  "display": "inline-block",
                  "lineHeight": "1",
                }
              }
            >
              <span
                className="slds-color__text_gray-10 slds-align-middle slds-m-right_small"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                Saved 5 mins ago
              </span>
              <span />
            </div>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#right"
                />
              </svg>
              Run
            </button>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save As
            </button>
            <button
              className="slds-button slds-button_brand"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Base with Page Type Editable 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="slds-builder-header__item-label"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "width": "100%",
                }
              }
            >
              <span
                className="slds-p-right_x-small slds-truncate"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                Page Type
              </span>
              <div
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <div
                  className="slds-tooltip-trigger"
                  style={
                    Object {
                      "display": "inline-block",
                      "lineHeight": "1",
                    }
                  }
                >
                  <button
                    className="slds-button slds-button_icon-inverse slds-button_reset"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "verticalAlign": "middle",
                      }
                    }
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-button__icon"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#edit"
                      />
                    </svg>
                    <span
                      className="slds-assistive-text"
                    >
                      Edit: Status
                    </span>
                  </button>
                  <span />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="slds-builder-header__item"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="slds-builder-header__item-label"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "width": "100%",
                }
              }
            >
              <span
                className="slds-p-right_x-small slds-truncate"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                Page Type
              </span>
              <div
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <div
                  className="slds-tooltip-trigger"
                  style={
                    Object {
                      "display": "inline-block",
                      "lineHeight": "1",
                    }
                  }
                >
                  <button
                    className="slds-button slds-button_icon-inverse slds-button_reset"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "verticalAlign": "middle",
                      }
                    }
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-button__icon"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#edit"
                      />
                    </svg>
                    <span
                      className="slds-assistive-text"
                    >
                      Edit: Status
                    </span>
                  </button>
                  <span />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Base with Toolbar 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <div
        className="slds-builder-toolbar"
        role="toolbar"
      >
        <div
          aria-label="Canvas Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-canvas-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#undo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Undo
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#redo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Redo
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Edit Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-edit-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#cut"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Cut
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#copy"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Copy
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#paste"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Paste
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Document Actions"
          className="slds-builder-toolbar__actions"
        >
          <div>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#right"
                />
              </svg>
              Run
            </button>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save As
            </button>
            <button
              className="slds-button slds-button_brand"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Base with Utilities 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <div
              className="slds-dropdown-trigger slds-dropdown-trigger_click"
              id="dropdown"
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseEnter={null}
              onMouseLeave={null}
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                disabled={false}
                onClick={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-page slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                      />
                    </svg>
                    <span
                      className="slds-assistive-text"
                    >
                      Dropdown
                    </span>
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Help"
                  >
                    Help
                  </span>
                  <span
                    className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                      />
                    </svg>
                    
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Custom Icon 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#world"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Failed Save 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <div
        className="slds-builder-toolbar"
        role="toolbar"
      >
        <div
          aria-label="Canvas Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-canvas-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#undo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Undo
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#redo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Redo
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Edit Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-edit-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#cut"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Cut
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#copy"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Copy
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#paste"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Paste
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Document Actions"
          className="slds-builder-toolbar__actions"
        >
          <div>
            <div
              className="slds-tooltip-trigger"
              style={
                Object {
                  "display": "inline-block",
                  "lineHeight": "1",
                }
              }
            >
              <button
                className="slds-button slds-color__text_gray-10 slds-align-middle slds-m-right_x-small"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                type="button"
              >
                Saved 45 mins ago
              </button>
              <span />
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <button
                aria-haspopup="dialog"
                className="slds-button slds-button_icon-container"
                disabled={false}
                id="popover-error"
                onClick={[Function]}
                onFocus={null}
                onMouseEnter={null}
                onMouseLeave={null}
                tabIndex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="slds-button__icon slds-icon-text-error"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#error"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Error
                </span>
              </button>
            </div>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#right"
                />
              </svg>
              Run
            </button>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save As
            </button>
            <button
              className="slds-button slds-button_brand"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBuilderHeader Successful Save 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "100px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-builder-header_container"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <header
        className="slds-builder-header"
      >
        <div
          className="slds-builder-header__item"
        >
          <div
            className="slds-builder-header__item-label slds-media slds-media_center"
          >
            <div
              className="slds-media__figure"
            >
              <span
                className="slds-icon_container slds-icon-utility-builder slds-current-color"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#builder"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Builder
                </span>
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              App Name
            </div>
          </div>
        </div>
        <nav
          className="slds-builder-header__item slds-builder-header__nav"
        >
          <ul
            className="slds-builder-header__nav-list"
          >
            <li
              className="slds-builder-header__nav-item"
            >
              <a
                className="slds-builder-header__item-action slds-media slds-media_center"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="slds-media__figure"
                >
                  <span
                    className="slds-icon_container slds-icon-utility-settings slds-current-color"
                  >
                    <svg
                      aria-hidden="true"
                      className="slds-icon slds-icon_x-small slds-icon-text-default"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
                      />
                    </svg>
                    
                  </span>
                </span>
                <span
                  className="slds-media__body"
                >
                  <span
                    className="slds-truncate"
                    title="Link"
                  >
                    Link
                  </span>
                </span>
              </a>
            </li>
            <li
              className="slds-builder-header__nav-item"
            >
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click"
                id="dropdown"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-builder-header__item-action slds-media slds-media_center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-utility-page slds-current-color"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#page"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Dropdown
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-truncate"
                      title="Dropdown"
                    >
                      Dropdown
                    </span>
                    <span
                      className="slds-icon_container slds-icon-utility-chevrondown slds-current-color slds-m-left_small"
                    >
                      <svg
                        aria-hidden="true"
                        className="slds-icon slds-icon_x-small slds-icon-text-default"
                      >
                        <use
                          href="/assets/icons/utility-sprite/svg/symbols.svg#chevrondown"
                        />
                      </svg>
                      
                    </span>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="slds-builder-header__item slds-has-flexi-truncate"
        >
          <h1
            className="slds-builder-header__item-label"
          >
            <span
              className="slds-truncate"
              title="Page Type"
            >
              Page Type
            </span>
          </h1>
        </div>
        <div
          className="slds-builder-header__item slds-builder-header__utilities"
        >
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#back"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Back
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Back"
                >
                  Back
                </span>
              </span>
            </a>
          </div>
          <div
            className="slds-builder-header__utilities-item"
          >
            <a
              className="slds-builder-header__item-action slds-media slds-media_center"
              href="#"
              onClick={[Function]}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-utility-settings slds-current-color"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_x-small slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#help"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    Help
                  </span>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-truncate"
                  title="Help"
                >
                  Help
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <div
        className="slds-builder-toolbar"
        role="toolbar"
      >
        <div
          aria-label="Canvas Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-canvas-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#undo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Undo
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#redo"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Redo
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Edit Actions"
          className="slds-builder-toolbar__item-group"
        >
          <div
            className="slds-button-group"
            id="button-group-edit-actions"
            role="group"
          >
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#cut"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Cut
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#copy"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Copy
              </span>
            </button>
            <button
              className="slds-button slds-button_icon-border"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#paste"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Paste
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Document Actions"
          className="slds-builder-toolbar__actions"
        >
          <div>
            <span>
              <svg
                aria-hidden="true"
                className="slds-m-right_x-small slds-icon slds-icon_x-small slds-icon-text-default"
                style={
                  Object {
                    "fill": "#4BCA81",
                  }
                }
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#check"
                />
              </svg>
              
            </span>
            <span
              className="slds-color__text_gray-10 slds-align-middle slds-m-right_small"
            >
              Saved
            </span>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#right"
                />
              </svg>
              Run
            </button>
            <button
              className="slds-button slds-button_neutral"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save As
            </button>
            <button
              className="slds-button slds-button_brand"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
